--- a/DMDemo/DMDemo/DMDemo.csproj
+++ b/DMDemo/DMDemo/DMDemo.csproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tesseract">
+      <HintPath>..\..\SDK\Tesseract.3.3.0\lib\net40\Tesseract.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GetHwndInfor.cs">
@@ -85,19 +88,28 @@
     <Compile Include="GetHwndInfor.Designer.cs">
       <DependentUpon>GetHwndInfor.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainFrom.cs">
+    <Compile Include="HwndGetTitleFrom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainFrom.Designer.cs">
-      <DependentUpon>MainFrom.cs</DependentUpon>
+    <Compile Include="HwndGetTitleFrom.Designer.cs">
+      <DependentUpon>HwndGetTitleFrom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NavigationFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NavigationFrom.Designer.cs">
+      <DependentUpon>NavigationFrom.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GetHwndInfor.resx">
       <DependentUpon>GetHwndInfor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainFrom.resx">
-      <DependentUpon>MainFrom.cs</DependentUpon>
+    <EmbeddedResource Include="HwndGetTitleFrom.resx">
+      <DependentUpon>HwndGetTitleFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NavigationFrom.resx">
+      <DependentUpon>NavigationFrom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -161,7 +173,14 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(ProjectDir)..\..\SDK\dm.dll" "$(TargetDir)" /y</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>copy "$(ProjectDir)..\..\SDK\dm.dll" "$(TargetDir)" /d /y
+xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\x86" "$(TargetDir)x86\"/d /s /y
+xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\x64" "$(TargetDir)x64\"/d /s /y
+xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\tessdata" "$(TargetDir)tessdata\"/d /s /y</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
