--- a/DMDemo/DMDemo/app.config
+++ b/DMDemo/DMDemo/app.config
@@ -1,3 +1,27 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="DMDemo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+        <DMDemo.Properties.Settings>
+            <setting name="mousePoint" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="className" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LikeTitle" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TopFormClassName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TopFormTitle" serializeAs="String">
+                <value />
+            </setting>
+        </DMDemo.Properties.Settings>
+    </userSettings>
+</configuration>
