--- a/DMDemo/DMDemo/DMDemo.csproj
+++ b/DMDemo/DMDemo/DMDemo.csproj
@@ -81,8 +81,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tesseract">
-      <HintPath>..\..\SDK\Tesseract.3.3.0\lib\net40\Tesseract.dll</HintPath>
+    <Reference Include="Tesseract, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SDK\Tesseract.2.2.0\Tesseract.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -200,9 +201,9 @@
     </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\x86" "$(TargetDir)x86\"/d /s /y
-xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\x64" "$(TargetDir)x64\"/d /s /y
-xcopy "$(ProjectDir)..\..\SDK\Tesseract.3.3.0\tessdata" "$(TargetDir)tessdata\"/d /s /y</PreBuildEvent>
+    <PreBuildEvent>xcopy "$(ProjectDir)..\..\SDK\Tesseract.2.2.0\x86" "$(TargetDir)x86\"/d /s /y
+xcopy "$(ProjectDir)..\..\SDK\Tesseract.2.2.0\x64" "$(TargetDir)x64\"/d /s /y
+xcopy "$(ProjectDir)..\..\SDK\Tesseract.2.2.0\tessdata" "$(TargetDir)tessdata\"/d /s /y</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
