--- a/DMDemo/DMDemo/DMDemo.csproj
+++ b/DMDemo/DMDemo/DMDemo.csproj
@@ -81,6 +81,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tesseract">
+      <HintPath>..\..\SDK\Tesseract.2.4.0\Tesseract.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EditImageSet.cs">
