完成了区域截屏

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /DMDemo/DMDemo/DMDemo.csproj.user
 /DMDemo/.vs/DMDemo/v14/.suo
 /DMDemo/DMDemo.v11.suo
+/DMDemo/CropImage/obj
+/DMDemo/CropImage/bin
