调整了截图业务逻辑，所有截图相关代码移到 CropImage 工程中实现

--- a/DMDemo/CropImage/CropImage.csproj
+++ b/DMDemo/CropImage/CropImage.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>ShowImage.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulationKey.cs" />
     <Compile Include="ToolBarsFrom.cs">
       <SubType>Form</SubType>
     </Compile>
