--- a/DMDemo/DMDemo/DMDemo.csproj
+++ b/DMDemo/DMDemo/DMDemo.csproj
@@ -71,6 +71,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SDK\Common.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\SDK\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -92,11 +95,19 @@
     <Compile Include="EditImageSet.Designer.cs">
       <DependentUpon>EditImageSet.cs</DependentUpon>
     </Compile>
+    <Compile Include="FromHwnd\GetHwndConfig.cs" />
+    <Compile Include="FromHwnd\MousePointInfor.cs" />
     <Compile Include="fro_AdvancedOCRImage_PlanA.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="fro_AdvancedOCRImage_PlanA.Designer.cs">
       <DependentUpon>fro_AdvancedOCRImage_PlanA.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fro_HwndAndOCR_PlanA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fro_HwndAndOCR_PlanA.Designer.cs">
+      <DependentUpon>fro_HwndAndOCR_PlanA.cs</DependentUpon>
     </Compile>
     <Compile Include="Fro_LookImage.cs">
       <SubType>Form</SubType>
@@ -104,10 +115,10 @@
     <Compile Include="Fro_LookImage.Designer.cs">
       <DependentUpon>Fro_LookImage.cs</DependentUpon>
     </Compile>
-    <Compile Include="GetHwndInfor.cs">
+    <Compile Include="FromHwnd\GetHwndInfor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GetHwndInfor.Designer.cs">
+    <Compile Include="FromHwnd\GetHwndInfor.Designer.cs">
       <DependentUpon>GetHwndInfor.cs</DependentUpon>
     </Compile>
     <Compile Include="HootKey.cs" />
@@ -132,16 +143,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowsHwnd.cs" />
     <EmbeddedResource Include="EditImageSet.resx">
       <DependentUpon>EditImageSet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fro_AdvancedOCRImage_PlanA.resx">
       <DependentUpon>fro_AdvancedOCRImage_PlanA.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fro_HwndAndOCR_PlanA.resx">
+      <DependentUpon>fro_HwndAndOCR_PlanA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Fro_LookImage.resx">
       <DependentUpon>Fro_LookImage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GetHwndInfor.resx">
+    <EmbeddedResource Include="FromHwnd\GetHwndInfor.resx">
       <DependentUpon>GetHwndInfor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HwndGetTitleFrom.resx">
